--- a/Portfolio/css/styles2.css
+++ b/Portfolio/css/styles2.css
@@ -21,6 +21,7 @@ img {
     display: block;
     margin: 1.25em;
     border-radius: 10px;
+    border: 5px solid #555;
 }
 
 /* Style rules for mobile viewport */
