--- a/Portfolio/Mars/CSS/styles.css
+++ b/Portfolio/Mars/CSS/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url('https://ajazzar.github.io/Portfolio/Mars/Images/space.png');
+    background-image: url('../Images/space.png');
     background-attachment: fixed;
 }
 
