--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
     background-color: #89cff0;
     max-width: 100%;
+    margin: 0px 100px;
+    padding: 0px 100px;
 }
 img {
     display: block;
@@ -25,4 +27,15 @@ p {
 
 h1{
  font-size: 32px; 
+}
+
+h2{
+    font-size: 24px;
+}
+
+h3{
+    font-size: 18px;
+}
+p, h1, h2, h3{
+    text-align: center;
 }
