--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
-    background-color: #89cff0;
-    max-width: 100%;
+    background-color: #fff;
     margin: 0px 100px;
     padding: 0px 100px;
 }
