--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@ img{
     padding-left: 20px;
 }
 p {
-    background-color: #fff;
     padding: 2%;
     font-family: 'Roboto Slab', serif;
     width: 100%;
@@ -47,6 +46,6 @@ h3{
 p, h1, h2, h3{
     text-align: center;
 }
-footer, p, main{
+footer, p, main, h1, h2, h3, ul, ol{
     background-color: #D3D3D3;
 }
