--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ header {
 }
 /* Style rules for photo and paragraphs */
 img{
-    padding-left: 20px;
+    align: center;
 }
 p {
     padding: 2%;
@@ -46,6 +46,6 @@ h3{
 p, h1, h2, h3{
     text-align: center;
 }
-footer, p, main, h1, h2, h3, ul, ol{
+footer, p, h1, h2, h3, ul, ol{
     background-color: #D3D3D3;
 }
