--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ a:active{
 /* Style rules for header */
 header {
     background-color: #89cff0;
+    height: 30%;
 }
 /* Style rules for photo and paragraphs */
 img{
@@ -34,7 +35,9 @@ p {
 h1{
  font-size: 32px; 
 }
-
+body{
+ height: 60%;   
+}
 h2{
     font-size: 24px;
 }
@@ -48,4 +51,8 @@ p, h1, h2, h3{
 }
 footer, p, h1, h2, h3, ul, ol{
     background-color: #D3D3D3;
+}
+
+footer{
+    height: 10%;
 }
