--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /* Style rules for body */
 body {
+    background-color: #89cff0;  
     margin: 0px 100px;
     padding: 0px 100px;
 }
@@ -18,12 +19,14 @@ a:active{
 }
 /* Style rules for header */
 header {
-    background-color: #89cff0;
     height: 30%;
 }
 /* Style rules for photo and paragraphs */
 img{
-    align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 p {
     padding: 2%;
@@ -48,9 +51,6 @@ h3{
 /* Style rules to align text to the center and to add a light gray background */
 p, h1, h2, h3{
     text-align: center;
-}
-footer, p, h1, h2, h3, ul, ol{
-    background-color: #D3D3D3;
 }
 
 footer{
