--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 /* Style rules for body */
 body {
-    background-color: #89cff0;  
     margin: 0px 100px;
     padding: 0px 100px;
 }
@@ -19,6 +18,7 @@ a:active{
 }
 /* Style rules for header */
 header {
+    background-color: #89cff0;  
     height: 30%;
 }
 /* Style rules for photo and paragraphs */
@@ -39,6 +39,7 @@ h1{
  font-size: 32px; 
 }
 body{
+ background-color: #D3D3D3;  
  height: 60%;   
 }
 h2{
@@ -54,5 +55,6 @@ p, h1, h2, h3{
 }
 
 footer{
+    background-color: #89cff0;  
     height: 10%;
 }
