--- a/style.css
+++ b/style.css
@@ -1,8 +1,4 @@
-/* Style rules for body */
-body {
-    margin: 0px 100px;
-    padding: 0px 100px;
-}
+    
 /* Style rules for links */
 a:link{
     color: #000;
@@ -18,7 +14,6 @@ a:active{
 }
 /* Style rules for header */
 header {
-    background-color: #89cff0;  
     height: 30%;
 }
 /* Style rules for photo and paragraphs */
@@ -38,8 +33,7 @@ p {
 h1{
  font-size: 32px; 
 }
-body{
- background-color: #D3D3D3;  
+main{
  height: 60%;   
 }
 h2{
@@ -52,9 +46,13 @@ h3{
 /* Style rules to align text to the center and to add a light gray background */
 p, h1, h2, h3{
     text-align: center;
+    margin: 0px 100px;
+    padding: 0px 100px;
+}
+header, main, footer{
+    background-color: #89cff0;
 }
 
-footer{
-    background-color: #89cff0;  
+footer{ 
     height: 10%;
 }
