--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-body{
-    margin: 0;
-    padding: 0;
-}
 /* Style rules for links */
 a:link{
     color: #000;
@@ -17,10 +13,10 @@ a:active{
 }
 /* Style rules for header */
 header {
-    height: 30%;
-    margin-top: -15px;
+    width: 110%;
+    padding-top: 25px;
 }
-/* Style rules for photo and paragraphs */
+/* Style rules for image and paragraphs */
 img{
   display: block;
   margin-left: auto;
@@ -38,9 +34,7 @@ p {
 h1{
  font-size: 32px; 
 }
-main{
- height: 60%;   
-}
+
 h2{
     font-size: 24px;
 }
@@ -48,7 +42,7 @@ h2{
 h3{
     font-size: 18px;
 }
-/* Style rules to align text to the center and to add a light gray background */
+/* Style rules to align text to the center and to add a light blue background */
 ul, ol, p, h1, h2, h3{
     text-align: center;
 }
@@ -56,7 +50,8 @@ header, footer{
     background-color: #89cff0;
     
 }
+/* Style rules for footer */
 footer{ 
-    height: 10%;
-    margin-bottom: -15px;
+    width: 110%;
+    padding-bottom: 15px;
 }
