--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@ img{
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
-  height: 50%;
+  width: 20%;
+  height: 20%;
 }
 p {
     padding: 2%;
@@ -47,9 +47,11 @@ ul, ol, p, h1, h2, h3{
 }
 header, footer{
     background-color: #89cff0;
-    
 }
 /* Style rules for footer */
 footer{ 
     padding-bottom: 15px;
 }
+/* Style rules to extend the page contents to the same width as the viewport */
+header, main, footer{
+    width: 120vw;
