--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ a:hover{
 a:active{
     color: #FF0000;
 }
+
+li > a{
+    padding-bottom: 10px;
+}
 /* Style rules for header */
 header {
     padding-top: 25px;
