--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ p {
     font-family: 'Roboto Slab', serif;
     font-size: 16px;
 }
-/* Style rules for headers */
+/* Style rules for font size */
 h1{
  font-size: 32px; 
 }
@@ -43,6 +43,9 @@ h2{
 
 h3{
     font-size: 18px;
+}
+p{
+    font-size: 13px;
 }
 /* Style rules to align text to the center and to add a light blue background */
 ul, ol, p, h1, h2, h3{
