--- a/style.css
+++ b/style.css
@@ -50,7 +50,10 @@ header, footer{
 }
 
 /* Style rules to cover the remaining space on the web page */
-header, main, footer{
+header, footer{
     padding: 25px 80px 0px 80px;
+}
+main{
+    padding: 0px 80px;
 }
 
