--- a/Portfolio/css/styles2.css
+++ b/Portfolio/css/styles2.css
@@ -190,7 +190,7 @@ main {
         margin-left: 40%;
 	}
     
-
+}
     
 /* Media Query for Desktop Viewport */
 @media screen and (min-width: 1015px), print {
