--- a/Portfolio/css/styles2.css
+++ b/Portfolio/css/styles2.css
@@ -49,7 +49,7 @@ h3{
 }
 
 /* Style rules to align text to the center and to add a light blue background */
-ul, ol, p, h1, h2, h3{
+ul, ol, p, h2, h3{
     text-align: center;
 }
 header, footer{
