--- a/starter-thinkfulbnb-main/style.css
+++ b/starter-thinkfulbnb-main/style.css
@@ -54,7 +54,7 @@ main img {
 
 header {
   background-color: #ff385c;
-  padding: 20px 20px 0 20px;
+  padding: 20px 20px 10px 20px;
   text-align: center;
 }
 
@@ -89,16 +89,19 @@ header nav ul li a:hover {
 form {
   border: 2px solid #ff385c;
   padding: 10px;
+  justify-content: space-between;
 }
 
 form label {
   font-weight: bold;
+  align-self: flex-start;
 }
 
 form select,
 form input {
   margin-bottom: 20px;
   width: 180px;
+  align-self: flex-end;
 }
 
 form button {
@@ -109,7 +112,6 @@ form button {
   padding: 15px;
   width: 100%;
 }
-
 /* -------  Footer ------- */
 
 footer {
@@ -143,6 +145,8 @@ main img {
 /* ---  Groups & Items --- */
 .group {
   flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 .group2 {
   display: flex;
@@ -186,7 +190,20 @@ header nav ul li a:hover {
 
 form {
   display: flex;
-  justify-content: space-between;
+  flex-direction: row;
+  width: 100%;
 }
+form label {
+  font-weight: bold;
+  align-self: flex-start;
+}
+
+form select,
+form input {
+  margin-bottom: 20px;
+  width: 180px;
+  align-self: flex-end;
+}
+
 
 }
