--- a/starter-thinkfulbnb-main/style.css
+++ b/starter-thinkfulbnb-main/style.css
@@ -2,18 +2,21 @@
 
 body {
   font-family: "Lato", sans-serif;
+  width: 100vw;
+}
+
+.logo{
+  width: 100%;
 }
 
 h2 {
   font-size: 26px;
-  font-weight: 400;
   margin: 0 10px 10px 10px;
   text-align: center;
 }
 
 h3 {
   font-size: 18px;
-  font-weight: 500;
 }
 
 p {
@@ -23,11 +26,13 @@ p {
 
 section {
   padding: 20px;
+  width: 100vw;
 }
 
 section.alternate-background {
   background-color: #00a699;
   color: #fff;
+  width: 100vw;
 }
 
 main img {
@@ -54,13 +59,13 @@ main img {
 
 header {
   background-color: #ff385c;
-  padding: 20px 20px 0 20px;
-  text-align: center;
+  padding: 20px;
+  width: 100vw;
 }
 
 .logo {
   font-family: "Pangolin", cursive;
-  font-size: 72px;
+  font-size: 65px;
   color: #fff;
 }
 
@@ -96,54 +101,47 @@ form {
   flex-direction: row;
   justify-content: space-between;
 }
+
+
 form label {
   font-weight: bold;
+  padding: 0 8px;
 }
 
 form select,
 form input {
   margin-bottom: 20px;
-  width: 180px;
+  padding: 0 8px;
+  width: 50vw;
 }
 
 form button {
   background-color: #ff385c;
   border: none;
   color: #fff;
-  font-size: 24px;
-  padding: 15px;
-  width: 100%;
+  font-size: 20px;
+  padding: 10px;
+  width: 100vw;
 }
 /* -------  Footer ------- */
 
 footer {
   background-color: #ff385c;
+  width: 100vw;
+  padding: 20px;
 }
 
 footer p {
   color: #fff;
   text-align: center;
   padding: 20px;
+  width: 100vw;
 }
 
 /* -------  Media Query ------- */
 @media all and (min-width: 480px) {
 /* -------  General Styles ------- */
-  header {
-    display: flex;
-    justify-content: space-between;
-    padding: 0 30px;
-  }
-
-  header h1 {
-    margin: 14px 0;
-    padding-top: 0;
-  }
- 
-main img {
-  width: 100%;
-}
-
+  
 /* ---  Groups & Items --- */
 .group {
   flex-direction: row;
@@ -156,6 +154,7 @@ main img {
   flex-wrap: wrap;
   justify-content: space-around;
 }
+
 .item2 {
   width: 46%;
 }
@@ -165,9 +164,14 @@ main img {
 }
 
 /* -------  Navigation ------- */ 
+header {
+  display: flex;
+  width: 100vw;
+}
+
 header nav {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
 }
 
 header nav ul {
@@ -191,33 +195,20 @@ header nav ul li a:hover {
 /* -------  Search Form ------- */
 form {
   border: 2px solid #ff385c;
-  padding: 10px;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  width: 90vw;
 }
 
 #form {
-  display: flex;
   flex-direction: column;
-  align-content: space-evenly;
-  padding: 5px;
 }
 form label {
   font-weight: bold;
 }
-
-form select,
-form input {
-  margin-bottom: 20px;
-  width: 100%;
-}
-
-form button {
-  background-color: #ff385c;
-  border: none;
-  color: #fff;
-  font-size: 24px;
-  width: 100%;
+form label, form select, form input, form button {
+  width: 15vw;
 }
 
 }
